Bug 1851192 - Ensure gfxPlatformFontList shutdown waits for the InitFontList thread to terminate. r=gfx-reviewers,lsalzman,aosmond

Differential Revision: https://phabricator.services.mozilla.com/D188501